# data_competitions

./: .gitignore  README.md  docker-compose.yml  postCreate.sh
.devcontainer/: Dockerfile  devcontainer.json
template/: README.md  pyproject.toml
template/dev/hydra_sample/: hydra_test_main.py
template/dev/hydra_sample/conf/: debug.yaml  default.yaml
template/dev/mlflow_sample/: ml_flow_main.py
template/template/: data_manager.py  dockhub.py  levenshtein.py  line_notify.py  main.py  makelabel.py  model.py  my_args.py  my_collater.py  my_util.py  token_error_rate.py  train.py
