[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Hattomo (TomohiroHattori) <45988993+Hattomo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
